updated risk_sensitive_foraging in many ways

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,24 @@ __temp*
 __pycache__/
 *.py[cod]
 .DS_Store
+bargaining
+bertrand
+common_value_auction
+cournot
+dictator
+guess_two_thirds
+lemon_market
+matching_pennies
+my_simple_survey
+principal_agent
+prisoner
+public_goods
+public_goods_simple
+quiz
+real_effort
+traveler_dilemma
+trust
+trust_simple
+ultimatum
+vickrey_auction
+volunteer_dilemma
